refactor: Mise à jour du CSS pour certaines sections

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -56,14 +56,13 @@
     .pkm-data-name select {width: 100%; margin: 8px 0;}
     .pkm-tab-split {flex-direction: column; align-items: center;}
     .dex-table {width: 90%; margin: 8px 0;}
-    .pkm-tab-stats-talents {flex-direction: column; align-items: center; margin: 32px 0;}
+    .pkm-tab-stats-container {flex-direction: column; align-items: center; margin: 32px 0;}
     .pkm-imagerie div {flex-direction: column; align-items: center;}
     .pkm-imagerie-image-container {width: 90%;}
     .pkm-tab-evolution {justify-content: center;}
-    .pkm-tab-evolution div, .pkm-tab-evolution div:nth-child(1), .pkm-tab-evolution div:nth-child(3), .pkm-tab-evolution div:nth-child(4) {
-        width: 90%;
-        margin: 8px 32px;
-    }
+    .pkm-tab-evolution div {width: 100%; margin: 8px 32px !important;}
+    .pkm-talents-element-container {flex-direction: column; align-items: center;}
+    .pkm-talents-element {width: 90% !important;}
 }
 
 @media screen and (max-width: 560px) {
