fix: Correction de la gestion de certains nom de Pokémon

--- a/templates/views/dex.jinja
+++ b/templates/views/dex.jinja
@@ -486,7 +486,7 @@
 
         {% if pokemon.pokedex_id > 1 %}
             document.getElementById('button-pkm-prev').addEventListener('click', () => {
-                window.location.href = '/dex/{{ unidecode(data[pokemon.pokedex_id - 1].name.fr.lower()) }}';
+                window.location.href = '/dex/{{ unidecode(data[pokemon.pokedex_id - 1].name.fr.lower().replace(' ', '').replace('♀', '-f').replace('♂', '-m')) }}';
             });
         {% else %}
             document.getElementById('button-pkm-prev').style.visibility = 'hidden';
@@ -494,7 +494,7 @@
 
         {% if pokemon.pokedex_id < (data|length - 1) %}
             document.getElementById('button-pkm-next').addEventListener('click', () => {
-                window.location.href = '/dex/{{ unidecode(data[pokemon.pokedex_id + 1].name.fr.lower()) }}';
+                window.location.href = '/dex/{{ unidecode(data[pokemon.pokedex_id + 1].name.fr.lower().replace(' ', '').replace('♀', '-f').replace('♂', '-m')) }}';
             });
         {% else %}
             document.getElementById('button-pkm-next').style.visibility = 'hidden';
