fix(data): mise à jour des URL non actualisées #64
Ce commit effectue une mise à jour des URL qui n'avaient pas été correctement actualisées.

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -63,6 +63,8 @@
     .pkm-tab-evolution div {width: 100%; margin: 8px 32px !important;}
     .pkm-talents-element-container {flex-direction: column; align-items: center;}
     .pkm-talents-element {width: 90% !important;}
+    .pkm-container {justify-content: center;}
+    .pkm-container button {display: none;}
 }
 
 @media screen and (max-width: 560px) {
