refactor: Ajout d'une icône pour accéder à la documentation

--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -30,10 +30,13 @@
                 </a>
             </div>
             <div>
-                <a href="/dex">
+                <a href="{{ url_for('_docs') }}">
+                    <img src="/assets/documentation.png" draggable="false" alt="" class="link_logo">
+                </a>
+                <a href="{{ url_for('_dex') }}">
                     <img src="/assets/pokedex.png" draggable="false" alt="" class="link_logo">
                 </a>
-                <a href="" target="_blank">
+                <a href="https://discord.gg/s2CPCt87sc" target="_blank">
                     <img src="/assets/discord.png" draggable="false" alt="" class="link_logo">
                 </a>
                 <a href="https://github.com/Yarkis01/TyraDex" target="_blank">
