--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -30,9 +30,17 @@
                 </a>
             </div>
             <div>
-                <a href="https://github.com/Yarkis01/PokeAPI" target="_blank">
-                    <p>Github</p>
-                    <img src="/assets/github.png" draggable="false" alt="Logo github">
+                <a href="{{ url_for('_docs') }}">
+                    <img src="/assets/documentation.png" draggable="false" alt="" class="link_logo">
+                </a>
+                <a href="{{ url_for('_dex') }}">
+                    <img src="/assets/pokedex.png" draggable="false" alt="" class="link_logo">
+                </a>
+                <a href="https://discord.gg/s2CPCt87sc" target="_blank">
+                    <img src="/assets/discord.png" draggable="false" alt="" class="link_logo">
+                </a>
+                <a href="https://github.com/Yarkis01/TyraDex" target="_blank">
+                    <img src="/assets/github.png" draggable="false" alt="" class="link_logo">
                 </a>
             </div>
         </header>
@@ -44,7 +52,7 @@
             <p>
                 Données provenant de <a href="https://www.pokepedia.fr/" target="_blank">Poképédia</a> & <a href="https://www.serebii.net/" target="_blank">Serebii</a>.
                 <br>
-                © <span id="copy_date"></span> | <a href="https://github.com/Yarkis01/PokeAPI/blob/main/LICENSE" target="_blank">Mit License</a> | Une simple API crée avec ❤️ par <a href="https://github.com/Yarkis01" target="_blank">Yarkis</a> & <a href="https://github.com/Ashzuu" target="_blank">Ashzuu</a>
+                © <span id="copy_date"></span> | <a href="https://github.com/Yarkis01/TyraDex/blob/main/LICENSE" target="_blank">Mit License</a> | Une simple API crée avec ❤️ par <a href="https://github.com/Yarkis01" target="_blank">Yarkis</a> & <a href="https://github.com/Ashzuu" target="_blank">Ashzuu</a>
                 <br>
                 © Pokémon et tous les noms respectifs sont des marques déposées de <u>The Pokémon Company International</u>, <u>Game Freak</u> et <u>Nintendo</u>.
             </p>
