--- a/templates/views/homepage.jinja
+++ b/templates/views/homepage.jinja
@@ -43,7 +43,7 @@
         <p>
             <span>/api/v1/pokemon/&lt;identifiant&gt;</span><br><br>
             Permet de récupérer la fiche d'un Pokémon grâce à son identifiant dans le Pokédex National<br><br>
-            <a href="{{ base_url }}api/v1/pokemon/246" hx-boost="false">Voir la fiche du Pokémon</a>
+            <a href="{{ base_url }}api/v1/pokemon/246">Voir la fiche du Pokémon</a>
         </p>
     </div>
     <div>
@@ -51,7 +51,7 @@
         <p>
             <span>/api/v1/pokemon/&lt;nom&gt;/&lt;region&gt;</span><br><br>
             Permet d'obtenir la forme régionale d'un Pokémon<br><br>
-            <a href="{{ base_url }}api/v1/pokemon/caninos/hisui" hx-boost="false">Voir la fiche de Caninos de Hisui</a>
+            <a href="{{ base_url }}api/v1/pokemon/caninos/hisui">Voir la fiche de Caninos de Hisui</a>
         </p>
     </div>
     <div>
@@ -59,7 +59,7 @@
         <p>
             <span>/api/v1/pokemon</span><br><br>
             Permet de récupérer la liste de tous les Pokémons<br><br>
-            <a href="{{ base_url }}api/v1/pokemon" hx-boost="false">Voir tous les Pokémons</a>
+            <a href="{{ base_url }}api/v1/pokemon">Voir tous les Pokémons</a>
         </p>
     </div>
     <div>
@@ -67,7 +67,7 @@
         <p>
             <span>/api/v1/gen/&lt;generation&gt;</span><br><br>
             Permet de récupérer la liste de tous les Pokémon d'une génération voulue<br><br>
-            <a href="{{ base_url }}api/v1/gen/9" hx-boost="false">Voir les Pokémons de la Gen. 9</a>
+            <a href="{{ base_url }}api/v1/gen/9">Voir les Pokémons de la Gen. 9</a>
         </p>
     </div>
 </section>
